@@ -144,6 +144,9 @@ end = "End"
 forcedLogging = "Forced logging"
 internalFlow = "Internal flow"
 localCookieSettings = "Local cookie settings"
+configFileSettings = "Configuration file settings"
+pluginOverwriteSetting = "Plugin overwrite setting"
+factorySetting = "Factory settings"
 
 calledFromTxt = "Called from"
 calledFromLine = ", line "
@@ -344,6 +347,9 @@ end = "Ende"
 forcedLogging = "erzwungenes Logging"
 internalFlow = "interner Ablauf"
 localCookieSettings = "lokale Cookie Einstellungen"
+configFileSettings = "Konfigurationsdatei Einstellungen"
+pluginOverwriteSetting = "Plugin Overwrite Einstellungen"
+factorySetting = "Fabrikeinstellungen"
 
 calledFromTxt = "Aufruf von"
 calledFromLine = ", Zeile "
