@@ -116,6 +116,9 @@ abstract class AbstractHelper extends TestCase
         $this->setValueByReflection('additionalSkinList', [], Registration::class);
         $this->setValueByReflection('plugins', [], Registration::class);
         $this->setValueByReflection('additionalScalarString', [], Registration::class);
+        $this->setValueByReflection('newFallbackValues', [], Registration::class);
+        $this->setValueByReflection('additionalLanguages', [], Registration::class);
+        $this->setValueByReflection('newSettings', [], Registration::class);
 
         // Reset the cache in the ReflectionClass.
         $this->setValueByReflection('cache', [], ReflectionClass::class);
