@@ -53,6 +53,9 @@ class AbstractRegistration extends AbstractHelper
     const ADD_SCALAR_STRING = 'additionalScalarString';
     const NEW_SETTINGS = 'newSettings';
     const ADD_LANGUAGES = 'additionalLanguages';
+    const NEW_FALLBACK_VALUE = 'newFallbackValues';
+    const ADDITIONAL_LANGUAGES = 'additionalLanguages';
+    const NEW_FALLBACK_VALUES = 'newFallbackValues';
 
     /**
      * @var Registration
@@ -88,5 +91,6 @@ class AbstractRegistration extends AbstractHelper
         $this->setValueByReflection(static::ADD_SCALAR_STRING, [], $this->registration);
         $this->setValueByReflection(static::NEW_SETTINGS, [], $this->registration);
         $this->setValueByReflection(static::ADD_LANGUAGES, [], $this->registration);
+        $this->setValueByReflection(static::NEW_FALLBACK_VALUE, [], $this->registration);
     }
 }
